# DriftGuard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  server.py  test_graph.pkl
.github/workflows/: ci.yml
demo/: README.md  __init__.py  demo_agent.py
demo/langgraph/: README.md  __init__.py  demo_agent.py
demo/rule_based/: README.md  __init__.py  demo_agent.py
embedding/: embedding_engine.py
graph/: graph_store.py  merge_engine.py  prune_engine.py
models/: event.py  response.py
retrieval/: retrieval_engine.py
src/driftguard/: __init__.py  benchmark.py  config.py  errors.py  evaluation.py  guard.py  logging_config.py  mcp.py  metrics.py  runtime.py  server.py
src/driftguard/adapters/: __init__.py  generic.py  langgraph.py
src/driftguard/embedding/: embedding_engine.py
src/driftguard/graph/: graph_store.py  merge_engine.py  prune_engine.py  test_graph.pkl
src/driftguard/models/: response.py
src/driftguard/retrieval/: retrieval_engine.py
src/driftguard/storage/: base.py  persistence.py  sqlite_persistence.py
src/driftguard/utils/: normalization.py  similarity.py
storage/: persistence.py
tests/: conftest.py  test_benchmark_cli.py  test_demo_agent.py  test_dependency_failures.py  test_evaluation.py  test_guard.py  test_langgraph_demo.py  test_metrics_adapters.py  test_persistence_hardening.py  test_pipeline.py  test_project_metadata.py  test_retrieval_precision.py  test_runtime_mcp.py  test_sqlite_persistence.py
utils/: normalization.py  similarity.py
