[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.14",
    "sqlite-utils>=3.39",
    "tenacity>=9.1.4",
]

[project.scripts]
driftguard-mcp = "driftguard.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-vv -ra"
testpaths = ["tests"]
